  ##################################
##### Changed in Scannomatic 0.99 #####
   ##################################

*** Canvases are re-usable in analyse one and images that don't
    match the fixture will now load and give users a one-chance
    at selecting the gs-area manually.

*** Analyse one view now gives values in Kodak value-space

*** Manual blob selection is now much less annoying

*** Manual blob selection in GUI-analysis implemented

*** Interim semi-sophisticated blob detection implemented,
    but only used through GUI-analysis

*** Draggable selections implemented in the GUI-analysis view

*** Manual size setting of selection in the GUI-analysis view

*** The inter-scan calibration is now done using a fitted
    3rd degree polynomial, currently translating pixel-values
    to Kodak target values (to be changed for a cell count
    estimate)

*** Hard-coded into the analysis, the program uses the Kodak
    gray-scale values.

*** Change to user specifying output dir - not file in analysis
    module

*** Analysis script saves grid-placement as a file for certain 
    time-points.

*** Grid-detection re-written using no heuristics (?!) and 
    producing much more robust grid-placement

*** Converted the project.py command-line behaviour to use
    argparser for increased user-friendliness. Added possibility
    to track a colony through the time-series to investigate
    the robustness of the analysis methods.

*** Manual hardcoded xml production to reduce memory foot print.

*** In xml <cells> and <cell> where changed to <grid-cells> and
    <grid-cell>. <grid-cells>, <plates>, <scans> can only hold
    <grid-cell>, <plate>, <scan> respectively.

  ##################################
##### Changed in Scannomatic 0.98 #####
   ##################################

*** Analysis is now done in grayscale-values and not pixel values

*** Inserted <time></time> in xml per scan

  ##################################
##### Changed in Scannomatic 0.97 #####